# pm25-aqi-calculator

./: README.md  TROUBLESHOOTING.md  aqi.py  aqi_calculator.py  aqi_data.db  aqi_report.html  buildozer.spec  database_manager.py  excel_manager.py  instructions.txt  main.py  pyproject.toml  report_generator.py  report_generator_backup.py  report_template.html  requirements.txt  script.js  style.css  test_build.py
.github/workflows/: build.yml
